--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   }
