addition features, unit tests

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConduitClientSettings": {
-    "BaseAddress": "https://conduit.productionready.io"
+    "BaseAddress": "https://api.realworld.io"
   }
 }
